headless: Don't require parameters for all commands

Some DevTools clients omit the "params" object for commands that don't
take any parameters. Be less strict about requiring it to support these
clients.

BUG=679350

Review-Url: https://codereview.chromium.org/2630533002
Cr-Commit-Position: refs/heads/master@{#443598}

Former-commit-id: 5a4de2c40720151cff5143b3f684698932a82af4